# just

./: README.md  just.cabal
src/main/: Main.hs  Utils.hs
src/test/: Spec.hs
